tests/internal/negative_case/bad_enum_non_integer_init.c
// Expected: compile fail (enum initializer not integer constant expression)
int main() {
  int x = 3;
  enum E {
    A = x
  };
  return A;
}
